--- a/src/main/resources/assets/aether_legacy/lang/en_US.lang
+++ b/src/main/resources/assets/aether_legacy/lang/en_US.lang
@@ -86,7 +86,7 @@ item.green_aercloud_globule.name=Green Aercloud Globule
 item.cinerarium_rod.name=Cinerarium Rod
 item.builder_slayer.name=Builder Slayer
 item.valkyrie_ring.name=Valkyrie Ring
-item.haste_ring.name=Agility Ring
+item.haste_ring.name=Haste Ring
 item.tipped_gravitite_sword.name=Gravitite Sword
 item.tipped_divineral_sword.name=Tipped Divineral Sword
 item.osmium_insignia.name=Osmium Insignia
@@ -160,6 +160,15 @@ item.reinforced_elysian_ring.name=Elysian Ring
 item.amplified_elysian_ring.name=Elysian Ring
 item.notched_core.name=Notched Core
 item.blackberry_seeds.name=Blackberry Seeds
+item.reinforced_haste_ring.name=Haste Ring
+item.amplified_haste_ring.name=Haste Ring
+item.reinforced_bone_ring.name=Bone Ring
+item.amplified_bone_ring.name=Bone Ring
+item.reinforced_valkyrie_ring.name=Valkyrie Ring
+item.amplified_valkyrie_ring.name=Valkyrie Ring
+item.reinforced_regeneration_stone.name=Healing Stone
+item.reinforced_iron_bubble.name=Iron Bubble
+item.amplified_iron_bubble.name=Iron Bubble
 
 item.white_dye.name=White Dye
 item.black_dye.name=Black Dye
