--- a/src/main/resources/assets/aether_legacy/lang/en_US.lang
+++ b/src/main/resources/assets/aether_legacy/lang/en_US.lang
@@ -166,7 +166,7 @@ item.reinforced_bone_ring.name=Bone Ring
 item.amplified_bone_ring.name=Bone Ring
 item.reinforced_valkyrie_ring.name=Valkyrie Ring
 item.amplified_valkyrie_ring.name=Valkyrie Ring
-item.reinforced_regeneration_stone.name=Healing Stone
+item.reinforced_regeneration_stone.name=Regeneration Stone
 item.reinforced_iron_bubble.name=Iron Bubble
 item.amplified_iron_bubble.name=Iron Bubble
 item.reinforced_golden_feather.name=Golden Feather
