--- a/src/main/resources/assets/aether_legacy/lang/en_US.lang
+++ b/src/main/resources/assets/aether_legacy/lang/en_US.lang
@@ -1215,9 +1215,9 @@ achievement.golden_aercloud=Back to the void!
 achievement.gravitite_tools=Pink is the new blue
 achievement.skyroot_tools=A new beginning
 achievement.holystone_tools=Ambrosium Finder
-achievement.zanite_tools=Iron of the Aether
-achievement.arkenium_tools=The intermediate tier
-achievement.continuum_tools=The mimicry gemstone
+achievement.zanite_tools=The more damaged the better!
+achievement.arkenium_tools=Reaching Further than before!
+achievement.continuum_tools=What a Poor Copy...
 achievement.continuum_orb=Orb!
 achievement.fruit_stew=Eating like a King
 achievement.divineral=True Magic!
@@ -1258,6 +1258,42 @@ achievement.zarnillys_scales=Tough Beast!
 achievement.auralite=The Pale Crystal
 achievement.divineral_block=Throne for a God
 achievement.electrified=Electrified!
+achievement.zanite_gemstone=Iron of the Aether
+achievement.arkenium_fragment=The Intermediate Tier
+achievement.continuum_gemstone=The mimicry gemstone
+achievement.mythic_defeat_bronze=No Longer the Unseen...
+achievement.skyroot_crafting=The Heavenly Workbench
+achievement.aether_sword=Time to Strike in the Aether
+achievement.kill_thunderlo=Gentle Giant Down!
+achievement.kill_zephyroo=Outback Tipper!
+achievement.aether_hunter=Aether Hunter
+achievement.kill_elysian_guardian=An Unwelcomed Surprise!
+achievement.kill_aercenturion=Survived the Aether Centurion!
+achievement.shrine_mender=Shrine Mender
+achievement.arctic_island=A Cyro's Paradise!
+achievement.golden_island=This island is Enchanted!
+achievement.divine_island=Truly Divine...
+achievement.aether_florist=Aether Florist
+achievement.getting_scaled=Armor Smith!
+achievement.getting_tipped=Tool Smith!
+achievement.bringing_out_colors=Bringing Out the Colors
+achievement.discharged=Discharged
+achievement.true_thorns=True Thorns
+achievement.defeat_palladium=A Legendary Battle!
+achievement.iron_skin=Iron Skin
+achievement.powering_up=Powering Up
+achievement.strengthened_levitation=Strengthened Levitation
+achievement.godly_reach=Godly Reach!
+achievement.notch_restored=Notch's Hammer Restored!
+achievement.realm_conquer=Realm Conquer
+achievement.lucky=Lucky!
+achievement.builders_beware=Builders Beware!
+achievement.newnew_ore=Another New Ore?
+achievement.charging_the_gemstone=Charging the Gemstone
+achievement.even_shinier=Even Shiner
+achievement.balanced_flight=Alternative Flight
+achievement.not_balanced_flight=Balanced Flight?
+achievement.next_level_enchantments=Next Level Enchantments!
 
 # Achievement Descriptions
 achievement.enter_aether.desc=Enter the Aether
@@ -1312,6 +1348,42 @@ achievement.zarnillys_scales.desc=Obtain Zarnillys Scales
 achievement.auralite.desc=Obtain Auralite Crystals
 achievement.divineral_block.desc=Craft a block of divineral
 achievement.electrified.desc=Find a way to power up an Urker and defeat it in combat.
+achievement.zanite_gemstone.desc=Obtain a zanite gemstone
+achievement.arkenium_fragment.desc=Obtain an arkenium fragement
+achievement.continuum_gemstone.desc=Obtain a continuum gemstone
+achievement.mythic_defeat_bronze.desc=Defeat the ??? Slider
+achievement.skyroot_crafting.desc=Craft a Skyroot Crafting Table
+achievement.aether_sword.desc=Craft any Aether Sword 
+achievement.kill_thunderlo.desc=Kill a Thunderlo
+achievement.kill_zephyroo.desc=Kill a Zephyroo
+achievement.aether_hunter.desc=Kill a Common Hostile Aether Mob
+achievement.kill_elysian_guardian.desc=Defeat an Elysian Guardian
+achievement.kill_aercenturion.desc=Defeat an Aercenturion
+achievement.shrine_mender.desc=Repair the Shrine in the Palladium Dungeon
+achievement.arctic_island.desc=Discover an Arctic Island
+achievement.golden_island.desc=Discover a Golden Island
+achievement.divine_island.desc=Discover a Divine Island
+achievement.aether_florist.desc=Collect any Aether Plant other than saplings
+achievement.getting_scaled.desc=Upgrade any chestplate with zarnyillys scales
+achievement.getting_tipped.desc=Upgrade any pickaxe with auralite crystals
+achievement.bringing_out_colors.desc=Enchant aetheralstone, deific, agiosite, or holystone to brighten them up and craft them into bricks
+achievement.discharged.desc=Have the discharge cape equipped while being struck by lightining
+achievement.true_thorns.desc=Equip a full set of Amplified Elysian Armor
+achievement.defeat_palladium.desc=Defeat the palladium dungeon boss
+achievement.iron_skin.desc=Consume a life shard
+achievement.powering_up.desc=Consume a power shard
+achievement.strengthened_levitation.desc=Use a divineral tool to levitate a block
+achievement.godly_reach.desc=Equip and use an amplified valkyrie lance
+achievement.notch_restored.desc=Use the Amplified Hammer of Notch
+achievement.realm_conquer.desc=Use an Amplified Nether, Overworld, or End Slayer at their full power
+achievement.lucky.desc=Mine any ore from the overworld or aether with the Amplified Notched Pickaxe and get lucky
+achievement.builders_beware.desc=Use the Builder Slayer when fighting any Valkyrie
+achievement.newnew_ore.desc=Collect an empyrean gemstone
+achievement.charging_the_gemstone.desc=Craft a charged empyrean gemstone
+achievement.even_shinier.desc=Use empyrean gemstones to reinforce any misc item
+achievement.balanced_flight.desc=Equip an Amplified Valkyrie Ring
+achievement.not_balanced_flight.desc=Equip a full set of amplified valkyrie armor and the amplified valkyrie ring
+achievement.next_level_enchantments.desc=Open the Gui of the Divine Enchantment Table
 
 # Creative Tabs Names
 tab.aether_blocks=Aether Blocks
