--- a/src/main/resources/assets/aether_legacy/lang/en_US.lang
+++ b/src/main/resources/assets/aether_legacy/lang/en_US.lang
@@ -88,7 +88,7 @@ item.builder_slayer.name=Builder Slayer
 item.valkyrie_ring.name=Valkyrie Ring
 item.haste_ring.name=Haste Ring
 item.tipped_gravitite_sword.name=Gravitite Sword
-item.tipped_divineral_sword.name=Tipped Divineral Sword
+item.tipped_divineral_sword.name=Divineral Sword
 item.osmium_insignia.name=Osmium Insignia
 item.skyroot_hoe.name=Skyroot Hoe
 item.holystone_hoe.name=Holystone Hoe
@@ -108,7 +108,7 @@ item.vanite_gloves.name=Vanite Gloves
 item.pherithium_gloves.name=Pherithium Gloves
 item.klangite_gloves.name=Klangite Gloves
 item.heavy_blaze_gloves.name=Heavy Blaze Gloves
-item.effrine_gloves.name=Effrine Gloves
+item.effrine_gloves.name=Efrine Gloves
 item.copper_gloves.name=Copper Gloves
 item.amplified_obsidian_helmet.name=Obsidian Helmet
 item.amplified_obsidian_chestplate.name=Obsidian Chestplate
@@ -399,8 +399,8 @@ item.dungeon_key_divinegolden.name=Divine Golden Key
 item.dungeon_key_cobalt.name=Cobalt Key
 item.dungeon_key_osmium.name=Osmium Key
 item.dungeon_key_palladium.name=Palladium Key
-item.dungeon_key_mythicgolden.name=Mythic Golden Key
-item.dungeon_key_mythicsilver.name=Mythic Silver Key
+item.dungeon_key_mythicgolden.name=Unseen Golden Key
+item.dungeon_key_mythicsilver.name=Unseen Silver Key
 item.amplified_continuum_sword.name=Continuum Sword
 item.amplified_continuum_pickaxe.name=Continuum Pickaxe
 item.amplified_continuum_shovel.name=Continuum Shovel
@@ -454,7 +454,7 @@ item.divineral_ingot.name=Divineral Ingot
 item.enchanted_divineral.name=Enchanted Divineral
 item.arkenium_chunk.name=Arkenium Chunk
 item.arkenium_ingot.name=Arkenium Ingot
-item.divineral_sword.name=Divineral Sword
+item.divineral_sword.name=Gravitite Sword
 item.divineral_pickaxe.name=Divineral Pickaxe
 item.divineral_axe.name=Divineral Axe
 item.divineral_shovel.name=Divineral Shovel
@@ -721,8 +721,8 @@ tile.aetheral_stone_wall.name=Aetheralstone Wall
 tile.aetheral_stone_double_slab.name=Aetheralstone Double Slab
 aetheral_stone_slab.name=Aetheralstone Slab
 tile.void_planks.name=Void Wood Planks
-tile.deific.name=Deific
-tile.enchanted_deific.name=Enchanted Deific
+tile.deific.name=Deific Stone
+tile.enchanted_deific.name=Enchanted Deific Stone
 tile.enchanted_holystone.name=Enchanted Holystone
 tile.genesis_stone.name=Genesis Stone
 tile.genesis_stairs.name=Genesis Stone Stairs
@@ -815,7 +815,7 @@ tile.deific_zanite_ore.name=Zanite Ore
 tile.deific_arkenium_ore.name=Arkenium Ore
 tile.deific_gravitite_ore.name=Gravitite Ore
 tile.deific_continuum_ore.name=Continuum Ore
-tile.burstblossom.name=Bust Blossom
+tile.burstblossom.name=Burst Blossom
 tile.carrion_flower.name=Carrion Flower
 tile.moonlit_bloom.name=Moonlit Bloom
 tile.aether_farmland.name=Aether Farmland
@@ -1101,7 +1101,7 @@ entity.raptor.name=Anzu
 entity.flynx.name=Flynx
 entity.whirlwind.name=Whirlwind
 entity.carrion_sprout.name=Carrion Sprout
-entity.aerwhale_mount.name=Tammable Aerwhale
+entity.aerwhale_mount.name=Tamable Aerwhale
 entity.genesis_dragon.name=Elysian Dragon
 entity.cyro_guardian.name=Cyro Guardian
 entity.cyro.name=Cyro
@@ -1196,7 +1196,7 @@ entity.aether_legacy.elite_valkyrie.name=Elite Valkyrie
 # Damage Descriptions
 death.attack.aether_legacy.dart=%s was shot by %s
 death.attack.aether_legacy.dart.item=%s was shot by %s using %s
-death.attack.aether_legacy.poison=%s was inebriated
+death.attack.aether_legacy.poison=%s was poisoned
 
 # Containers
 container.aether_legacy.incubator=Incubator
@@ -1368,7 +1368,7 @@ achievement.aether_florist.desc=Collect any Aether Plant other than saplings
 achievement.getting_scaled.desc=Upgrade any chestplate with zarnyillys scales
 achievement.getting_tipped.desc=Upgrade any pickaxe with auralite crystals
 achievement.bringing_out_colors.desc=Enchant aetheralstone, deific, agiosite, or holystone to brighten them up and craft them into bricks
-achievement.discharged.desc=Have the discharge cape equipped while being struck by lightining
+achievement.discharged.desc=Have the discharge cape equipped while being struck by lightning
 achievement.true_thorns.desc=Equip a full set of Amplified Elysian Armor
 achievement.defeat_palladium.desc=Defeat the palladium dungeon boss
 achievement.iron_skin.desc=Consume a life shard
@@ -1526,7 +1526,7 @@ gui.zanite.cyro_invaild=It seems this realm does not provide the necessary condi
 gui.divine_et.invalid_structure=Golden Oak Bookshelves must be placed around the Legendary Enchanting Table to Use!
 
 gui.elysian_totem=The structure surrounding the totem seems to have been eroded/incomplete. Perhaps if it is repaired it will activate...
-gui.elysian_totem_rightclick=Something seems to be missing, the totem seems to missing something perhaps if I offer some kind of offering it will activate?
+gui.elysian_totem_rightclick=The totem seems to be missing something. Perhaps if I provide some kind of offering, it will activate?
 
 gui.enable_assets=Welcome to Aether Departure! Enable the Resource Pack that has downloaded on startup otherwise most textures and sounds will be missing!(This message will only appear once)
 gui.enable_assets2=Welcome to Aether Departure! Make sure to close and relaunch the game on install and each update or else Aether textures will be broken!(This message will only appear once)
@@ -1964,7 +1964,7 @@ lore.aether_legacy.tipped_continuum_sword=A sword made out of continuum that has
 lore.aether_legacy.amplified_continuum_sword=The amplified version of the continuum sword. Has about 50-75% of the properites of standard holystone, zanite, arkenium, and gravitite weapons. Damage and durability are far better than the standard continuum sword.
 lore.aether_legacy.tipped_gravitite_sword=The tipped variant of the gravitite sword. Has greater uses and damage but does not launch mobs into the air has high when hit. Amplify this item to restore and improve the orginal ability. 2 divineral ingots to amplify. 
 lore.aether_legacy.divineral_sword=The amplified version of a gravitite sword. Has much greater uses and damage and launches mobs almost twice as high when hit.
-lore.aether_legacy.tipped_divineral_sword=A more damaging version of the divineral sword at the cost of loosing most of it's ability to launch mobs into the air.
+lore.aether_legacy.tipped_divineral_sword=A more powerful version of the divineral sword, at the cost of losing most of it's ability to launch mobs into the air.
 lore.aether_legacy.tipped_flaming_sword=The tipped variant of the flaming sword. Sets mobs on fire when hit and it stacks with fire aspect. Deals more damage and has more uses than the standard flaming sword. 4 divineral ingots to amplify. 
 lore.aether_legacy.amplified_flaming_sword=The amplified variant of the flaming sword. Sets mobs on fire far longer when hit and it stacks with fire aspect. Deals a decent amount more damage and has more uses than the standard flaming sword.
 lore.aether_legacy.tipped_lightning_sword=The tipped version of the lightning sword. An ancient sword which summons lightning to its foes. Has more uses and deals damage than the standard lightning sword. 4 divineral ingots to amplify. 
@@ -2226,7 +2226,7 @@ lore.aether_legacy.elysian_core=Dropped by Elysian Golems found in the Palladium
 lore.aether_legacy.elysian_offering=Right click the Elysian Totem found in the Palladium dungeon with the completed structure to summon the Elysian Dragon.
 lore.aether_legacy.dexterity_shard=Dungeon loot found in the Osmium dungeon. Right click to permently increase the player's walking speed, by default it can be done up to 10 times and each level adds 1% speed to the player's walking speed.
 lore.aether_legacy.notched_core=Dungeon loot found in the Palladium dungeon. Used to craft the Divine Enchantment Table.
-lore.aether_legacy.power_shard=Dungeon loot found in the Palladium dungeon. Right click to increase the player's attack damage. Each level will increase it by 1-2 hearts and it can be done up to 4 times by default. However if the player dies, they will loose this buff.
+lore.aether_legacy.power_shard=Dungeon loot found in the Palladium dungeon. Right click to increase the player's attack damage. Each level will increase it by 1-2 hearts, and it can be done up to 4 times by default. However if the player dies, they will lose this buff.
 lore.aether_legacy.elysian_helmet=Equivalent stats to gravitite. The full set will provide the player with an aura that deals 1 heart of damage to all hostile mobs around the player at random in a 2x3x2 volume.
 lore.aether_legacy.elysian_chestplate=Equivalent stats to gravitite. The full set will provide the player with an aura that deals 1 heart of damage to all hostile mobs around the player at random in a 2x3x2 volume.
 lore.aether_legacy.elysian_leggings=Equivalent stats to gravitite. The full set will provide the player with an aura that deals 1 heart of damage to all hostile mobs around the player at random in a 2x3x2 volume.
