zh_CN update and fixed unlocalizable strings

--- a/src/main/resources/assets/aether_legacy/lang/en_US.lang
+++ b/src/main/resources/assets/aether_legacy/lang/en_US.lang
@@ -666,13 +666,11 @@ tile.skyroot_fence_gate.name=Skyroot Fence Gate
 tile.sun_altar.name=Sun Altar
 tile.skyroot_bookshelf.name=Skyroot Bookshelf
 tile.skyroot_bed.name=Skyroot Bed
-tile.pink_aercloud.name=Pink Aercloud
 tile.magenta_aercloud.name=Magenta Aercloud
 tile.orange_aercloud.name=Orange Aercloud
 tile.storm_aercloud.name=Storm Aercloud
 tile.green_aercloud.name=Green Aercloud
 tile.purple_aercloud.name=Purple Aercloud
-tile.crystal_sapling.name=Crystal Sapling
 tile.lime_aercloud.name=Lime Aercloud
 tile.light_green_aercloud.name=Light Green Aercloud
 tile.orange_stem.name=Orange Tree
@@ -709,7 +707,6 @@ agiosite_slab.name=Agiosite Slab
 tile.continuum_block.name=Continuum Block
 tile.void_log.name=Void Wood
 tile.void_leaves.name=Void Leaves
-tile.enchanted_aetheral_stone.name=Enchanted Aetheral Stone
 tile.enchanted_aetheral_stone.name=Enchanted Aetheral Stone
 tile.enchanted_aetheral_stone_stairs.name=Enchanted Aetheral Stone Stairs
 tile.enchanted_aetheral_stone_wall.name=Enchanted Aetheral Stone Wall
@@ -764,7 +761,6 @@ tile.cracked_oblitus_stone_2.name=Cyro Stone
 tile.oblitus_stone.name=Oblitus Stone
 tile.oblitus_stone_2.name=Oblitus Stone
 tile.golden_oak_planks.name=Golden Oak Wood Planks
-tile.golden_oak_double_slab.name=Golden Oak Double Slab
 golden_oak_slab.name=Golden Oak Wood Slab
 tile.golden_oak_double_slab.name=Golden Oak Double Slab
 tile.golden_oak_stairs.name=Golden Oak Stairs
@@ -1100,7 +1096,6 @@ entity.infestantibus_aerbat.name=Infestantibus Aerbat
 entity.raptor.name=Anzu
 entity.flynx.name=Flynx
 entity.whirlwind.name=Whirlwind
-entity.carrion_sprout.name=Carrion Sprout
 entity.aerwhale_mount.name=Tamable Aerwhale
 entity.genesis_dragon.name=Elysian Dragon
 entity.cyro_guardian.name=Cyro Guardian
@@ -1613,6 +1608,11 @@ gui.aether_menu.aether_theme=Aether Theme
 
 gui.aether_trivia.pro_tip=Pro Tip:
 
+lore.aether_legacy.title1=Book
+lore.aether_legacy.title2=of Lore:
+lore.aether_legacy.title_item=Item :
+lore.aether_legacy.prev=Prev.
+lore.aether_legacy.next=Next
 lore.aether_legacy.aechor_petal=The petal of an Aechor Plant, they have a sweet aroma to them. These are a Moa's favorite food, and can be used to feed baby Moas.
 lore.aether_legacy.aerogel=The result of the Aether's unique climate and lava combining. It can be crafted into various decorative blocks and is blast resistant.
 lore.aether_legacy.aerogel_slab=Crafted from Aerogel. Slabs are half blocks, versatile for decoration and smooth slopes. Try adding some to a building’s roofing!
@@ -1716,7 +1716,6 @@ lore.aether_legacy.iron_bubble=A common dungeon loot. It allows for the wearer t
 lore.aether_legacy.iron_gloves=Part of the Iron Armor set, it is needed to complete the Iron Armor set.
 lore.aether_legacy.iron_pendant=An aesthetic accessory made of iron.
 lore.aether_legacy.iron_ring=An aesthetic accessory made of iron.
-lore.aether_legacy.jeb_hammer=A mysterious hammer that shoots projectiles out of it. At one point it vanished from existence. It's said this was actually Jeb's hammer at one point.
 lore.aether_legacy.leather_gloves=Dyeable gloves to match your leather tunic! This is needed to complete the Leather armor set.
 lore.aether_legacy.life_shard=A very rare item found in Gold Dungeons. Using this will give you an extra permanent heart! The feeling of using it is very strange, and hard to describe.
 lore.aether_legacy.light_angelic_stone=The Light version of Angelic Stone. It is less common than Angelic Stone, but it looks really nice as a decorative block.
@@ -1750,7 +1749,6 @@ lore.aether_legacy.phoenix_leggings=Found in Gold Dungeons, when fully worn, thi
 lore.aether_legacy.pig_slayer=Kills any Pig type mobs with nothing with a single blow. But why would you want to do that? Great for traversing the Nether.
 lore.aether_legacy.pillar=The main part of the Silver Dungeon's decorative pillars, they spawn all around the dungeon, and are excellent for building.
 lore.aether_legacy.pillar_top=The top of the Silver Dungeon's decorative pillars, they look excellent, and are great for building.
-lore.aether_legacy.pink_aercloud=A very soft cloud that is pink. It has natural healing properties, healing anyone's wounds when stepped in.
 lore.aether_legacy.present=A wonderful holiday gift, open it for a surprise! Be careful, as there's a chance you could get ssssssurprised!
 lore.aether_legacy.purple_flower=These pretty violet flowers can be found in large numbers around the Aether. They can be crafted into purple dye when placed into a Crafting Table.
 lore.aether_legacy.quicksoil=A silky sand with extremely slippery properties. It can be seen floating on the side of Aether islands. Be careful around it, or you'll fall off.
